<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            tools:context=".ui.MainActivity">

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:id="@+id/main_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:nextFocusRight="@+id/fab" />

                    <LinearLayout android:id="@+id/bottom_actions" android:layout_width="match_parent" android:layout_height="72dp" android:orientation="horizontal" android:gravity="center" android:paddingStart="6dp" android:paddingEnd="6dp" android:paddingTop="4dp" android:paddingBottom="4dp" android:background="#F4F7FB">
<FrameLayout android:layout_width="0dp" android:layout_height="52dp" android:layout_weight="1" android:layout_margin="3dp">
<androidx.appcompat.widget.AppCompatButton android:id="@+id/btn_connect" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@drawable/baz_btn_idle" android:text="@string/baz_connect" android:textAllCaps="false" android:textColor="#FFFFFF" android:textStyle="bold" android:drawableTop="@drawable/ic_start_idle" android:drawablePadding="2dp"/>
<ProgressBar android:id="@+id/pb_connect" style="?android:attr/progressBarStyleSmall" android:layout_width="20dp" android:layout_height="20dp" android:layout_gravity="center" android:indeterminateTint="#FFFFFF" android:visibility="gone"/>
</FrameLayout>
<FrameLayout android:layout_width="0dp" android:layout_height="52dp" android:layout_weight="1" android:layout_margin="3dp">
<androidx.appcompat.widget.AppCompatButton android:id="@+id/btn_ping_all" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@drawable/baz_btn_ping" android:text="@string/baz_bottom_ping" android:textAllCaps="false" android:textColor="#FFFFFF" android:textStyle="bold" android:drawableTop="@drawable/ic_whatshot_white_24dp" android:drawablePadding="2dp"/>
</FrameLayout>
<FrameLayout android:layout_width="0dp" android:layout_height="52dp" android:layout_weight="1" android:layout_margin="3dp">
<androidx.appcompat.widget.AppCompatButton android:id="@+id/btn_fastest" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@drawable/baz_btn_fast" android:text="@string/baz_bottom_fastest" android:textAllCaps="false" android:textColor="#FFFFFF" android:textStyle="bold" android:drawableTop="@drawable/ic_whatshot_black_24dp" android:drawablePadding="2dp"/>
<ProgressBar android:id="@+id/pb_fastest" style="?android:attr/progressBarStyleSmall" android:layout_width="20dp" android:layout_height="20dp" android:layout_gravity="center" android:indeterminateTint="#FFFFFF" android:visibility="gone"/>
</FrameLayout>
</LinearLayout>
                    <LinearLayout
                        android:id="@+id/layout_test"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/connection_test_height"
                        android:background="@drawable/background_test_button"
                        android:gravity="center|left"
                        android:clickable="true"
                        android:focusable="true">

                        <TextView
                            android:id="@+id/tv_test_state"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="2"
                            android:minLines="1"
                            android:paddingStart="16dp"
                            android:text="@string/connection_test_pending"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorPrimary_light" />


                    </LinearLayout>
                </LinearLayout>


                <com.github.jorgecastilloprz.FABProgressCircle
                    android:id="@+id/fabProgressCircle"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_gravity="bottom|end">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="bottom|end"
                        android:layout_marginBottom="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/ic_v_idle"
                        android:clickable="true"
                        android:focusable="true"
                        app:layout_anchorGravity="bottom|right|end"
                        android:nextFocusLeft="@+id/recycler_view" />

                </com.github.jorgecastilloprz.FABProgressCircle>
            </androidx.coordinatorlayout.widget.CoordinatorLayout>
        </RelativeLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:itemIconTint="@color/colorPrimary_dark"
        app:itemTextColor="@color/colorPrimary"
        app:menu="@menu/menu_drawer" >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/white"
                android:padding="14dp">

            <TextView
                    android:id="@+id/version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/accent" />
        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>

